--- a/_posts/2019-07-07-the-us-narrative-today.html
+++ b/_posts/2019-07-07-the-us-narrative-today.html
@@ -1640,5 +1640,108 @@ stories:
   state: Indiana
   domain: http://www.news-banner.com/
   link: https://news-banner.com/2019/07/markle-boy-scouts-to-retire-flags/
+images:
+- name: white-house-lawn-white-house-window-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-satan-red.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit.jpg
+- name: fence-mexico-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-sand-paper.jpg
+- name: mosaic-face-mosaic-face-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-ww2-color.jpg
+- name: old-gas-pumps-oldgaspumps-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-spagetti-accident.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-colorful-dream.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colorful-dream.JPG
+- name: soldier-kneeling-26304845730-d4e495e25f-o-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-gan-vogh.jpg
+- name: oldhousecars-house-old-cars-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-diego-rivera1.jpg
+- name: legal-statue-legalstatue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue.jpg
+- name: walled-garden-walled-garden-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-kandinsky-bv.jpg
+- name: supreme-court-supremecourt-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dali-three.jpg
+- name: window-window-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-clean-view.jpg
+- name: fence-fence-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crafty-painting.jpg
+- name: rain-princess-IMG_8374.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8374.jpg
+- name: castle-wall-DSC-0067-colorful-dream.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-colorful-dream.JPG
+- name: castle-wall-DSC-0067-dark-rain.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dark-rain.JPG
+- name: oldbarn-oldbarn-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-marcel-duchamp.jpg
+- name: power-lines-power-lines-empty-space-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-smoking-cigarette.jpg
+- name: server-cloud-server-racks-clouds-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-purple-pond.jpg
+- name: mosaic-face-mosaic-face-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-circuit.jpg
+- name: store-on-corner-oldcabin-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-yellow-collage.jpg
+- name: dragon-desert-desert-dragon-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-crabapple.jpg
+- name: lincoln-memorial-lincolnmemorial-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-atari-asteroids.jpg
+- name: old-gas-pumps-oldgaspumps-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-deep-connections.jpg
+- name: aws-s3-square-C18YCQlUUAQjxRe-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C18YCQlUUAQjxRe-square.jpg
+- name: gypsymosaic-gypsy-eyes-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-alien-goggles.jpg
+- name: store-on-corner-store-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-spagetti-accident.jpg
+- name: border-crossing-bordercrossing-cinnamon-rolls.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-cinnamon-rolls.png
+- name: dragon-desert-desert-dragon-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dali-two.jpg
+- name: ellis-island-ellis-island-room-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-crabapple.jpg
+- name: server-cloud-server-racks-door-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dali-two.jpg
+- name: oldhotel-oldhotel-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-purple-storm.jpg
+- name: aws-s3-stories-dragon-close-up-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-dragon-close-up-yellow-collage.jpg
+- name: nazi-invasion-IMG_7169.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7169.jpg
+- name: old-door-lock-old-door-lock-2-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-nazi-poster.jpg
+- name: power-lines-power-lines-empty-space-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-mucha-mult.jpg
+- name: art-museum-art-museum-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-umberto-bocc.jpg
+- name: old-school-house-old-schoolhouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-clean-view.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-bright-sand.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit-2.jpg
+- name: power-lines-power-lines-empty-space-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-post-modern.jpg
+- name: school-clouds-church-clouds-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-smoking-cigarette.jpg
+- name: carry-load-carryload-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-really-hot.jpg
+- name: catacombs-catacombs-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-china-prop.jpg
+- name: san-francisco-street-view-san-francisco-street-view-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-dali.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-bright-sand.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-bright-sand.png
+- name: nyc-flag-nycflag-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-mucha-mult.jpg
+- name: white-house-whitehouse-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-far-away.jpg
+- name: san-francisco-street-view-san-francisco-street-view-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-matrix.jpg
+- name: white-house-whitehouse-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-crunch-paper.jpg
+- name: razorcliff-razorcliff.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff.jpg
 ---
 Main Street Hancock Group Takes Shape With Second Meeting.&nbsp;Daughters Of The American Revolution Honor Two Bixby Students.&nbsp;Kids Parade Kick Starts Fourth Of July Celebration In Charles City.&nbsp;The Ongoing Saga Of A Girl And Her Scale.&nbsp;Local Flood Victims Can Apply For Disaster Assistance Low Interest Loans.&nbsp;On The Eve Of Deployment, A 5K Farewell For Local Veteran.&nbsp;America's Freedom Fest Draws Thousands.&nbsp;Changing The Lives Of Children With Special Needs.&nbsp;
